# statespace

./: .buildinfo  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  MANIFEST.in  Makefile  README.md  case1.py  case2.py  class_innov.py  class_innovation_testing.py  class_resample.py  cloud.env  cloudbuild.yaml  example1.py  examples.py  genindex.html  index.html  introduction.html  jazwinski-ekf.py  jazwinski-kf.py  jazwinski-lzkf.py  jazwinski-pf.py  jazwinski-spkf.py  lz-bp.py  main.py  models.html  notes.html  objects.inv  plots.py  processors.html  py-modindex.html  pyproject.toml  pytest.ini  readme.md  requirements.txt  s1a.py  s1b.py  s1c.py  (+10 more)
.doctrees/: environment.pickle  index.doctree  introduction.doctree  models.doctree  notes.doctree  processors.doctree
.github/: pypi.yaml
.github/workflows/: docs.yaml  documentation.yaml  pypi.yaml
_sources/: index.rst.txt  introduction.rst.txt  models.rst.txt  notes.rst.txt
cloud/: ingress.yaml
docs/: CNAME  automate_sphinx_build.sh  conf.py  example2.py  index.rst  introduction.rst  learning.py  literature.rst  models.rst  notes  notes.md  notes.rst  processors.rst  readme.md  references.md
docs/arc/: references.md
docs/cloud/: deployments.yaml
docs/experimental/: structuraltimeseries.py
docs/images/: pf1.xcf
docs/liboregon/: README.md  index.html  procbft.m  procbot.m
docs/libstatespace_/: api.py  python_from_cpp.py
docs/papers/: bierman obs update.m.docx  thornton temporal update.m.docx
docs/source/: conf.py  index.rst
liboregon/: README.md
libstatespace/: CMakeLists.txt  api.cpp  api.h
models/: basemodel.py  bearingsonly.py  jazwinski1.py  jazwinski2.py  modelbase.py  nile.py  nonlinear1.py  nonlinear2.py  onestate.py  rccircuit.py  threestate.py
processors/: classical.py  kalman.py  modern.py  particle.py  sigmapoint.py  util.py
public/: README.txt  index.html
public/css/: mdb.css  mdb.min.css
public/html/: agency.html  architect.html  culinary.html  graphic-designer.html  hairdresser.html  team.html  (+6 more)
statespace/: __init__.py  __main__.py  bearings_only.py  bearingsonly.py  bsp1_abp.py  bsp1_abp_spbp.py  bsp1_abp_sspf.py  bsp1_abp_xbp.py  bsp1_jbp.py  bsp1_lzbp.py  bsp1_spbp.py  bsp1_spbp_abp.py  bsp1_sspf.py  bsp1_xbp.py  bsp1_xbp_abp.py  class_innov.py  class_resample.py  class_residuals.py  class_statespace.py  classical.py  decisions.py  ekf.py  ensembles.py  entrypoint.py  entrypoint_main.py  eval.py  examples.py  experiments.py  innov.py  innovations.py  jazwinski-pf.py  jazwinski-spkf.py  jazwinski1.py  jazwinski2.py  kalman.py  lzkf.py  model_rccircuit.py  models.py  modern.py  one_state.py  (+14 more)
tests/: test_kalman.py
(+21 files in other folders)
