[tool.poetry]
name = "statespace"
version = "1.6.2"
description = ""
authors = ["noah smith <noah@statespace.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
scipy = "*"
matplotlib = "*"
filterpy = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
sphinx = "*"
sphinx_rtd_theme = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
