[tool.poetry]
name = "statespace"
version = "1.6.5"
description = ""
authors = ["noah smith <noah@statespace.dev>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.24"
scipy = "^1.10"
matplotlib = "^3.6"
filterpy = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
#sphinx = "*" # does not work, use pip
#sphinx_rtd_theme = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
